// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlighter parses an highlighted attribute of hit object 1`] = `
<span
  className=""
>
  <span
    className="nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="highlighted"
  >
    hi
  </em>
  <span
    className="nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="highlighted"
  >
    hi
  </em>
  <span
    className="nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Highlighter renders a hit with a custom tag correctly 1`] = `
<span
  className=""
>
  <span
    className="nonHighlighted"
  >
    awesome 
  </span>
  <mark
    className="highlighted"
  >
    hi
  </mark>
  <span
    className="nonHighlighted"
  >
    ghlighted 
  </span>
  <mark
    className="highlighted"
  >
    hi
  </mark>
  <span
    className="nonHighlighted"
  >
    t!
  </span>
</span>
`;
